Fix some new features not translate to Chinese
modify resource file to support translation

Change-Id: I22e84133589d33a5da19bc7ae185786115f77a45
CRs-Fixed: 2060376

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -473,4 +473,6 @@
     <string name="trim_video_exit_msg">是否放弃对当前影片的操作？</string>
     <string name="trim_video_exit_discard">放弃</string>
     <string name="do_not_show_again">不再显示</string>
+    <string name="seestraight_input_image_is_small">图片太小无法处理</string>
+    <string name="seestraight_process_fail">无法处理图片</string>
 </resources>
