Fix some new features not translate to Chinese
modify additionally resource file to support translation

Change-Id: Ie9fba6eaa9e3ad2c404edeb8b5502a71286be864
CRs-Fixed: 2060376

--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -71,19 +71,19 @@
     <string name="close" msgid="5585646033158453043">"关闭"</string>
     <string name="switch_to_camera" msgid="7280111806675169992">"切换到相机"</string>
   <plurals name="number_of_items_selected">
-    <item quantity="zero" msgid="2142579311530586258">"选中了 %1$d 项"</item>
-    <item quantity="one" msgid="2478365152745637768">"选中了 %1$d 项"</item>
-    <item quantity="other" msgid="754722656147810487">"选中了 %1$d 项"</item>
+    <item quantity="zero" msgid="2142579311530586258">"已选中 %1$d 项"</item>
+    <item quantity="one" msgid="2478365152745637768">"已选中 %1$d 项"</item>
+    <item quantity="other" msgid="754722656147810487">"已选中 %1$d 项"</item>
   </plurals>
   <plurals name="number_of_albums_selected">
-    <item quantity="zero" msgid="749292746814788132">"选中了 %1$d 本相册"</item>
-    <item quantity="one" msgid="6184377003099987825">"选中了 %1$d 本相册"</item>
-    <item quantity="other" msgid="53105607141906130">"选中了 %1$d 本相册"</item>
+    <item quantity="zero" msgid="749292746814788132">"已选中 %1$d 本相册"</item>
+    <item quantity="one" msgid="6184377003099987825">"已选中 %1$d 本相册"</item>
+    <item quantity="other" msgid="53105607141906130">"已选中 %1$d 本相册"</item>
   </plurals>
   <plurals name="number_of_groups_selected">
-    <item quantity="zero" msgid="3466388370310869238">"选中了 %1$d 组"</item>
-    <item quantity="one" msgid="5030162638216034260">"选中了 %1$d 组"</item>
-    <item quantity="other" msgid="3512041363942842738">"选中了 %1$d 组"</item>
+    <item quantity="zero" msgid="3466388370310869238">"已选中 %1$d 组"</item>
+    <item quantity="one" msgid="5030162638216034260">"已选中 %1$d 组"</item>
+    <item quantity="other" msgid="3512041363942842738">"已选中 %1$d 组"</item>
   </plurals>
     <string name="show_on_map" msgid="6157544221201750980">"显示在地图上"</string>
     <string name="rotate_left" msgid="5888273317282539839">"向左旋转"</string>
@@ -215,6 +215,12 @@
     <item quantity="one" msgid="4340019444460561648">"已扫描%1$d项"</item>
     <item quantity="other" msgid="3138021473860555499">"已扫描%1$d项"</item>
   </plurals>
+    <!-- String indicating how many media items from the camera have been selected -->
+    <plurals name="ingest_number_of_items_selected">
+        <item quantity="zero">"已选择 %1$d 个项目"</item>
+        <item quantity="one">"已选择 %1$d 个项目"</item>
+        <item quantity="other">"已选择 %1$d 个项目"</item>
+    </plurals>
     <string name="ingest_sorting" msgid="1028652103472581918">"正在排序..."</string>
     <string name="ingest_scanning_done" msgid="8911916277034483430">"扫描已完成"</string>
     <string name="ingest_importing" msgid="7456633398378527611">"正在导入..."</string>
@@ -460,6 +466,16 @@
     <!-- The tips of trimming video -->
     <string name="fail_trim">抱歉，不能修剪该视频文件</string>
     <string name="can_not_trim">只有MP4和3GP文件才能修剪</string>
+
+    <string name="no_permission_for_drm">"抱歉，无法共享 DRM 文件"</string>
+    <string name="drm_license_info">"DRM 许可证信息"</string>
+    <string name="mimetype_not_supported">"无法播放此文件"</string>
+    <string name="action_consumes_rights">"播放此媒体需要使用相应权限"</string>
+    <string-array name="title_array_nav_items">
+        <item>@string/timeline_title</item>
+        <item>@string/albums_title</item>
+        <item>@string/videos_title</item>
+    </string-array>
 
     <!-- Timeline screen title -->
     <string name="timeline_title">时间轴</string>
